Fixed page shift issue with left toggle

--- a/src/components/LeftNav.module.scss
+++ b/src/components/LeftNav.module.scss
@@ -11,7 +11,7 @@
 .leftNav{
     height: 100%;
     width: 220px;
-    position: absolute;
+    position: fixed;
     left: 0;
     z-index: 200;
     background-color: #475666;
